name:                haskell-lispy
version:             0.1.0.0
synopsis:            A simple Lisp interpreter
description:         Please see README.md
homepage:            https://github.com/rydgel/haskell-lispy#readme
license:             BSD3
license-file:        LICENSE
author:              Jérôme Mahuet
maintainer:          jerome.mahuet@gmail.com
copyright:           2017 Jérôme Mahuet
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable haskell-lispy
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Core
                     , Parser
                     , Repl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , conduit
                     , attoparsec
                     , bytestring
                     , lens
                     , mtl
                     , monad-loops
                     , vector
                     , transformers
                     , text
  default-language:    Haskell2010

test-suite haskell-lispy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rydgel/haskell-lispy
